fix sentence and font align for mobile

--- a/src/components/component-home/concept/Concept.scss
+++ b/src/components/component-home/concept/Concept.scss
@@ -48,12 +48,11 @@
     top: 4%;
     right: 0;
   }
-  @media screen and (max-width: 780px){
+  @media screen and (max-width: 780px) {
     &__1,
     &__2,
     &__3,
-    &__4
-    {
+    &__4 {
       display: none;
     }
   }
@@ -61,6 +60,11 @@
     background-size: cover;
     &__title {
       text-align: center;
+    }
+    &__description {
+      @media screen and (max-width: 780px) {
+        text-align: left;
+      }
     }
     &__box {
       display: flex;
